# ComponentManagerCpp

./: CMakeLists.txt  CMakePresets.json  compile_flags.txt
src/: BasicComponent.hpp  ComponentManager.hpp  EntityManager.hpp  EventManager.hpp  Freelist.hpp  ResourceManager.hpp  main.cpp
src/collections/: Freelist.hpp  SparseSet.hpp
src/components/: BasicComponent.hpp
